--- a/src/assets/aframe5.html
+++ b/src/assets/aframe5.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<!-- A-Frame itself -->
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
-<!-- Pure three.js code that the A-Frame components use for location-based AR -->
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
 
-<!-- AR.js A-Frame components -->
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
 
 <body style="margin: 0px; overflow: hidden;">
@@ -17,7 +14,9 @@
     renderer="logarithmicDepthBuffer: true;"
     embedded
     arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+    log="Hello, Scene!"
   >
+
     <a-marker type="pattern" url="pattern-E.patt">
       <a-image
         src="../assets/imgs/samuele-errico-piccarini-MyjVReZ5GLQ-unsplash.jpg"
@@ -25,30 +24,44 @@
         height="5"
         position="0 0.5 0"
       ></a-image>
-
-      <!-- Texto de Boas-vindas -->
-      <!-- <a-text
-        value="Seja bem-vindo à Euler AR!"
-        color="white"
-        align="center"
-        position="0 0.2 0"
-        scale="2 2 2"
-      ></a-text> -->
     </a-marker>
 
     <a-marker type="pattern" url="markerq.patt">
-        <a-box
+      <a-box
         width="1"
         height="1"
         depth="1"
         position="0 0.5 0"
         material="color: red;"
+        cursor="raycaster"
+        event="click: showAlert;"
       ></a-box>
-      </a-marker>
 
-    
-    <a-entity camera></a-entity>
-  </a-scene>
+      <a-entity id="alert" visible="false">
+        <a-animation attribute="scale"
+                     begin="showAlert"
+                     from="0.1 0.1 0.1"
+                     to="1 1 1"
+                     dur="500"></a-animation>
+        <a-plane color="#222" width="5" height="3" position="0 2 -5"></a-plane>
+        <a-text value="Olá, seja bem-vindo!"
+                align="center"
+                position="0 2.5 -5"
+                color="white"
+                wrap-count="30"></a-text>
+      </a-entity>
+    </a-marker>
+
+    <a-entity camera cursor></a-entity>
+
+    <script>
+        AFRAME.registerComponent('showAlert', {
+          init: function () {
+            alert("Olá, seja bem-vindo!");
+          }
+        });
+      </script>
+
 </body>
 
 </html>
