--- a/src/assets/aframe6.html
+++ b/src/assets/aframe6.html
@@ -2,7 +2,7 @@
 <html>
 
 <!-- A-Frame itself -->
-<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
 <!-- Pure three.js code that the A-Frame components use for location-based AR -->
 <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
@@ -38,17 +38,44 @@
 
     <a-marker type="pattern" url="markerq.patt">
         <a-box
+        id="clickableBox"
         width="1"
         height="1"
         depth="1"
-        position="0 0.5 0"
+        position="0 1.5 -1"
         material="color: red;"
+        click-listener
+        cursor="raycaster" event="click: handleClick"
       ></a-box>
       </a-marker>
 
     
     <a-entity camera></a-entity>
   </a-scene>
+  <script>
+    AFRAME.registerComponent('click-listener', {
+      init: function () {
+        var el = this.el;
+        el.addEventListener('click', function () {
+          console.log('Cliquei no cubo!');
+        });
+      }
+    });
+  </script>
+
+  <script>
+    function handleClick() {
+      console.log("Clicou no cubo!");
+    }
+  </script>
+
+  <script>
+    var clickableBox = document.getElementById('clickableBox');
+
+    clickableBox.addEventListener('click', function () {
+      alert("Olá, seja bem-vindo!");
+    });
+  </script>
 </body>
 
 </html>
