Mostrar cubo com precisao

--- a/src/assets/aframe5.html
+++ b/src/assets/aframe5.html
@@ -17,14 +17,14 @@
     log="Hello, Scene!"
   >
 
-    <a-marker type="pattern" url="pattern-E.patt">
+    <!-- <a-marker type="pattern" url="pattern-E.patt">
       <a-image
         src="../assets/imgs/samuele-errico-piccarini-MyjVReZ5GLQ-unsplash.jpg"
         width="5"
         height="5"
         position="0 0.5 0"
       ></a-image>
-    </a-marker>
+    </a-marker> -->
 
     <a-marker type="pattern" url="markerq.patt">
       <a-box
@@ -52,7 +52,7 @@
       </a-entity>
     </a-marker>
 
-    <a-entity camera cursor></a-entity>
+    <a-entity camera></a-entity>
 
     <script>
         AFRAME.registerComponent('showAlert', {
