--- a/src/assets/aframe8.html
+++ b/src/assets/aframe8.html
@@ -5,10 +5,32 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
   <body style="margin : 0px; overflow: hidden;">
-   <a-scene id="scene1" embedded arjs cursor="rayOrigin: mouse;  fuse: true" renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;">
+   <a-scene 
+   id="scene1" 
+   embedded arjs="trackingMethod: best;"
+   cursor="rayOrigin: mouse;  fuse: true" 
+   renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;">
    
-  <a-box id="caja2" position='0 0.5 -5' material='opacity: 0.5;'></a-box>
-<a-marker preset='custom' type='pattern' url="https://raw.githubusercontent.com/MiguelUbeda/custom-one-marker/main/Marca_Numero2_borde65.patt" id="marker2">  
+   <a-marker type="pattern" url="pattern-E.patt">
+    <!-- <a-image
+      src="../assets/imgs/samuele-errico-piccarini-MyjVReZ5GLQ-unsplash.jpg"
+      width="5"
+      height="5"
+      position="0 0.5 0"
+    ></a-image> -->
+    <a-box 
+    id="caja2" 
+    position="0 1.5 -1"
+     material="color: red;"
+     width="1"
+     height="1"
+      depth="1"
+     >
+    </a-box>
+  </a-marker>
+
+
+<a-marker preset='custom' type='pattern' url="pattern-E.patt" id="marker2">  
   <a-entity gltf-model="./medica/02_Medica.gltf" id="caja2"  scale="0.6 0.6 0.6" position = "0 0 0"></a-entity>
 </a-marker>
 <a-marker preset='hiro' id="marker1">  
@@ -30,28 +52,24 @@
     // })
     hola.addEventListener("click", function(evt){
       console.log("HOLAAAA");
-      alert("1")
       console.log(marker);
       
       let scene = document.querySelector("a-scene");
 });
 marker1.addEventListener("markerLost", function(evt) {
-    alert("2")
   caja.setAttribute("visible", true);
   console.log("adios MARKER1")
 });
 marker1.addEventListener("click", function(evt) {
-    alert("3")
+  alert("Seja Bem vindo Ao Mundo Da Realidade Aumentada...")
   console.log("HOLA MARKER");
   caja.setAttribute("visible", false);
 });
 marker2.addEventListener("markerLost", function(evt) {
-    alert("4")
   console.log("ADIOS MARKER2");
-  caja2.setAttribute("visible", true);
+  // caja2.setAttribute("visible", true);
 });
 caja2.addEventListener("click", function(evt) {
-    alert("5")
   console.log("HOLA MARKER2");
   this.setAttribute("visible", false);
 });
