--- a/index2.html
+++ b/index2.html
@@ -3,55 +3,59 @@
   <head>
     <!-- <script src="https://aframe.io/releases/1.4.1/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
-    <script src="js/aframe.min.js"></script>
-    <script src="js/aframe-ar.js"></script>
+    <script src="./src/assets/js/aframe.min.js"></script>
+    <script src="./src/assets/js/aframe-ar.jss"></script>
   </head>
-  <body style="margin : 0px; overflow: hidden;">
-   <a-scene 
-   id="scene1" 
-   embedded arjs="trackingMethod: best; videoTexture: true; debugUIEnabled: false;"
-   cursor="rayOrigin: mouse;  fuse: true" 
-   renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;">
-<!-- -25.916211; longitude: 32.548454 -->
-   <a-entity 
-   gltf-model="./medica/Mobility_Reto01_00_.gltf" 
-   rotation="0 180 0" scale="0.15 0.15 0.15" 
-   gps-entity-place="longitude: 32.548454; latitude: -25.916211;" 
-   animation-mixer/>
-   
-   <a-marker type="pattern" url="pattern-E.patt">
-    <!-- <a-image
+  <body style="margin: 0px; overflow: hidden">
+    <a-scene
+      id="scene1"
+      embedded
+      arjs="trackingMethod: best; videoTexture: true; debugUIEnabled: false;"
+      cursor="rayOrigin: mouse;  fuse: true"
+      renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;"
+    >
+      <!-- -25.916211; longitude: 32.548454 -->
+      <a-entity
+        gltf-model="./medica/Mobility_Reto01_00_.gltf"
+        rotation="0 180 0"
+        scale="0.15 0.15 0.15"
+        gps-entity-place="longitude: 32.548454; latitude: -25.916211;"
+        animation-mixer
+      />
+
+      <a-marker type="pattern" url="pattern-E.patt">
+        <!-- <a-image
       src="../assets/imgs/samuele-errico-piccarini-MyjVReZ5GLQ-unsplash.jpg"
       width="5"
       height="5"
       position="0 0.5 0"
     ></a-image> -->
-    <a-box 
-    id="caja2" 
-    position="0 1.5 -1"
-     material="color: red;"
-     width="1"
-     height="1"
-      depth="1"
-     >
-    </a-box>
-  </a-marker>
+        <a-box
+          id="caja2"
+          position="0 1.5 -1"
+          material="color: red;"
+          width="1"
+          height="1"
+          depth="1"
+        >
+        </a-box>
+      </a-marker>
 
+      <a-marker preset="hiro" id="marker1">
+        <a-entity
+          gltf-model="./medica/Mobility_Reto01_00_.gltf"
+          id="caja1"
+          scale="0.6 0.6 0.6"
+        ></a-entity>
+      </a-marker>
+    </a-scene>
+    <script>
+      let marker1 = document.querySelector("#marker1");
 
-
-<a-marker preset='hiro' id="marker1">  
-  <a-entity gltf-model="./medica/Mobility_Reto01_00_.gltf" id="caja1"  scale="0.6 0.6 0.6"></a-entity>
-</a-marker>
-   </a-scene>
-   <script>
-    let marker1 = document.querySelector("#marker1");
-   
-
-marker1.addEventListener("click", function(evt) {
-  alert("Seja Bem vindo Ao Mundo Da Realidade Aumentada...")
-  console.log("HOLA MARKER");
-});
-
-   </script>
-</body>
+      marker1.addEventListener("click", function (evt) {
+        alert("Seja Bem vindo Ao Mundo Da Realidade Aumentada...");
+        console.log("HOLA MARKER");
+      });
+    </script>
+  </body>
 </html>
