--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <script src="https://aframe.io/releases/1.4.1/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
-    <script src="./src/assets/js/aframe.min.js"></script>
-    <script src="./src/assets/js/aframe-ar.jss"></script>
+    <script src="https://aframe.io/releases/1.4.1/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <!-- <script src="./src/assets/js/aframe.min.js"></script>
+    <script src="./src/assets/js/aframe-ar.jss"></script> -->
   </head>
   <body style="margin: 0px; overflow: hidden">
     <a-scene
