--- a/index2.html
+++ b/index2.html
@@ -15,22 +15,15 @@
       renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;"
     >
       <!-- -25.916211; longitude: 32.548454 -->
+      <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
       <a-entity
-        gltf-model="./medica/Mobility_Reto01_00_.gltf"
-        rotation="0 180 0"
+        geometry='primitive: box'
         scale="0.15 0.15 0.15"
-        gps-entity-place="longitude: 32.548454; latitude: -25.916211;"
+        gps-entity-place="longitude: 34.8781076; latitude: -19.8282405;"
         animation-mixer
       />
 
-      <a-marker type="pattern" url="pattern-E.patt">
-        <!-- <a-image
-      src="../assets/imgs/samuele-errico-piccarini-MyjVReZ5GLQ-unsplash.jpg"
-      width="5"
-      height="5"
-      position="0 0.5 0"
-    ></a-image> -->
-        <a-box
+      <a-box
           id="caja2"
           position="0 1.5 -1"
           material="color: red;"
@@ -39,15 +32,6 @@
           depth="1"
         >
         </a-box>
-      </a-marker>
-
-      <a-marker preset="hiro" id="marker1">
-        <a-entity
-          gltf-model="./medica/Mobility_Reto01_00_.gltf"
-          id="caja1"
-          scale="0.6 0.6 0.6"
-        ></a-entity>
-      </a-marker>
     </a-scene>
     <script>
       let marker1 = document.querySelector("#marker1");
