--- a/index2.html
+++ b/index2.html
@@ -15,23 +15,36 @@
       renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;"
     >
       <!-- -25.916211; longitude: 32.548454 -->
-      <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
+      <a-camera gps-new-camera="gpsMinDistance: 5"></a-camera>
       <a-entity
-        geometry='primitive: box'
+        position="0 1.6 3"
         scale="0.15 0.15 0.15"
         gps-entity-place="longitude: 34.8781076; latitude: -19.8282405;"
         animation-mixer
       />
 
       <a-box
-          id="caja2"
-          position="0 1.5 -1"
-          material="color: red;"
-          width="1"
-          height="1"
-          depth="1"
-        >
-        </a-box>
+        id="caja2"
+        position="0 1.5 -1"
+        material="color: red;"
+        width="1"
+        height="1"
+        depth="1"
+      >
+      </a-box>
+
+      <!-- Chão -->
+      <a-plane
+        position="0 0 -1"
+        rotation="-90 0 0"
+        width="10"
+        height="10"
+        color="#7BC8A4"
+      >
+      </a-plane>
+
+      <!-- Luz -->
+      <a-light type="directional" intensity="0.5" position="1 1 1"> </a-light>
     </a-scene>
     <script>
       let marker1 = document.querySelector("#marker1");
