--- a/index2.html
+++ b/index2.html
@@ -47,12 +47,12 @@
       <a-light type="directional" intensity="0.5" position="1 1 1"> </a-light>
     </a-scene>
     <script>
-      let marker1 = document.querySelector("#marker1");
+      // let marker1 = document.querySelector("#marker1");
 
-      marker1.addEventListener("click", function (evt) {
-        alert("Seja Bem vindo Ao Mundo Da Realidade Aumentada...");
-        console.log("HOLA MARKER");
-      });
+      // marker1.addEventListener("click", function (evt) {
+      //   alert("Seja Bem vindo Ao Mundo Da Realidade Aumentada...");
+      //   console.log("HOLA MARKER");
+      // });
     </script>
   </body>
 </html>
