--- a/index2.html
+++ b/index2.html
@@ -15,12 +15,13 @@
       renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;"
     >
       <!-- -25.916211; longitude: 32.548454 -->
-      <a-camera gps-new-camera="gpsMinDistance: 7.5"></a-camera>
+      <!-- gps-entity-place="longitude: 34.8781076; latitude: -19.8282405;" -->
+
+      <a-camera gps-new-camera="gpsMinDistance: 7.5 ongitude: 34.8781076; latitude: -19.8282405;"></a-camera>
       <a-entity
         position="0 1.6 3"
         scale="0.40 0.40 0.40"
         material="color: red"
-        gps-entity-place="longitude: 34.8781076; latitude: -19.8282405;"
         animation-mixer
       />
 
