--- a/src/assets/aframe6.html
+++ b/src/assets/aframe6.html
@@ -36,7 +36,7 @@
       ></a-text> -->
     </a-marker>
 
-    <a-marker type="pattern" url="markerq.patt">
+    <a-marker type="pattern" url="pp.patt">
         <a-box
         id="clickableBox"
         width="1"
@@ -52,7 +52,7 @@
     
     <a-entity camera></a-entity>
   </a-scene>
-  <script>
+  <!-- <script>
     AFRAME.registerComponent('click-listener', {
       init: function () {
         var el = this.el;
@@ -75,7 +75,7 @@
     clickableBox.addEventListener('click', function () {
       alert("Olá, seja bem-vindo!");
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
