--- a/src/assets/aframe-ar.html
+++ b/src/assets/aframe-ar.html
@@ -50,7 +50,7 @@
     </a-scene>
 
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-      <a-marker preset="custom" type="pattern" url="pattern-Euler22.patt">
+      <a-marker preset="custom" type="pattern" url="pp.patt">
         <a-image src="../assets/imgs/samuele-errico-piccarini-MyjVReZ5GLQ-unsplash.jpg" rotation="-90 0 0" width="3" height="4"></a-image>
       </a-marker>
       <a-entity camera></a-entity>
